[gd_scene load_steps=9 format=3 uid="uid://calsanliwqsh3"]

[ext_resource type="Theme" uid="uid://bddjgmb22q2vx" path="res://themes/RetroTheme/RetroTheme.tres" id="1_h37q1"]
[ext_resource type="StyleBox" uid="uid://yx2uvxo4off1" path="res://themes/os9/mainmenu/mainmenu.tres" id="2_bq6ts"]
[ext_resource type="Script" path="res://scripts/text_editor.gd" id="2_otcw6"]
[ext_resource type="Texture2D" uid="uid://dgwt7q0ivgah" path="res://themes/RetroTheme/textedit/TextBoxIdleBlack.png" id="2_ul73e"]
[ext_resource type="Script" path="res://scripts/code_edit.gd" id="3_uewk0"]
[ext_resource type="FontFile" uid="uid://bowouxapjhipp" path="res://themes/RetroTheme/fonts/PICO-8.ttf" id="4_5hpkv"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yr88o"]
texture = ExtResource("2_ul73e")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="CodeHighlighter" id="CodeHighlighter_77a87"]
number_color = Color(0.713726, 0.505882, 0.752941, 1)
symbol_color = Color(1, 0.843137, 0, 1)
function_color = Color(0.858824, 0.835294, 0.694118, 1)
member_variable_color = Color(0.337255, 0.611765, 0.839216, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_h37q1")
script = ExtResource("2_otcw6")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainMenu" type="Panel" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme_override_styles/panel = ExtResource("2_bq6ts")

[node name="MarginContainer2" type="MarginContainer" parent="Panel/MainMenu"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -160.0
offset_bottom = 40.0
grow_horizontal = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 20

[node name="Clock" type="Label" parent="Panel/MainMenu/MarginContainer2"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_5hpkv")
theme_override_font_sizes/font_size = 16
text = "9:21
"
horizontal_alignment = 2
vertical_alignment = 1
clip_text = true

[node name="MarginContainer" type="MarginContainer" parent="Panel/MainMenu"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="MenuBar" type="MenuBar" parent="Panel/MainMenu/MarginContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
theme_override_constants/h_separation = 16

[node name="File" type="PopupMenu" parent="Panel/MainMenu/MarginContainer/MenuBar"]
auto_translate_mode = 1
title = "File"
size = Vector2i(110, 118)
item_count = 5
item_0/text = "New"
item_1/text = "Open"
item_1/id = 1
item_2/text = "Save"
item_2/id = 2
item_3/text = "Save As..."
item_3/id = 3
item_4/text = "Quit Program"
item_4/id = 4

[node name="Edit" type="PopupMenu" parent="Panel/MainMenu/MarginContainer/MenuBar"]
auto_translate_mode = 1
title = "File"
size = Vector2i(110, 118)
item_count = 3
item_0/text = "Cut"
item_1/text = "Copy"
item_1/id = 1
item_2/text = "Paste"
item_2/id = 2

[node name="View" type="PopupMenu" parent="Panel/MainMenu/MarginContainer/MenuBar"]
auto_translate_mode = 1
title = "File"
size = Vector2i(110, 118)
item_count = 3
item_0/text = "Item 1"
item_1/text = "Item 2"
item_1/id = 1
item_2/text = "Item 3"
item_2/id = 2

[node name="Special" type="PopupMenu" parent="Panel/MainMenu/MarginContainer/MenuBar"]
auto_translate_mode = 1
title = "File"
size = Vector2i(110, 118)
item_count = 3
item_0/text = "Item 1"
item_1/text = "Item 2"
item_1/id = 1
item_2/text = "Item 3"
item_2/id = 2

[node name="Help" type="PopupMenu" parent="Panel/MainMenu/MarginContainer/MenuBar"]
auto_translate_mode = 1
title = "File"
size = Vector2i(110, 118)
item_count = 1
item_0/text = "About"

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 0
offset_right = 12.0
offset_bottom = 12.0

[node name="CodeEdit" type="CodeEdit" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 39.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.662745, 0.647059, 0.666667, 1)
theme_override_colors/selection_color = Color(0.713726, 0.505882, 0.752941, 1)
theme_override_colors/caret_color = Color(0.662745, 0.647059, 0.666667, 1)
theme_override_styles/normal = SubResource("StyleBoxTexture_yr88o")
theme_override_colors/line_number_color = Color(0.662745, 0.647059, 0.666667, 1)
theme_override_colors/code_folding_color = Color(1, 0.843137, 0, 1)
text = "// Calculate Fibonacci Numbers
// Originally written by Softwave (https://github.com/Softwave)
// Massive speedups by Francesco146 and LizzyFleckenstein03 
// (https://github.com/LizzyFleckenstein03) (https://github.com/Francesco146)
// Public Domain
// https://creativecommons.org/publicdomain/zero/1.0/
#include <stdio.h>
#include <stdlib.h>
#include <ctype.h>
#include <gmp.h>
#include <time.h>

int main(int argc, char *argv[])
{
	// Get User Input
	if (argc != 2) {
		printf(\"usage: %s NUM\\n\", argv[0]);
		return EXIT_FAILURE;
	}

	long count = strtol(argv[1], NULL, 10);

	// Setup GMP
	mpz_t a, b, p, q;
	mpz_init_set_ui(a, 1);
	mpz_init_set_ui(b, 0);
	mpz_init_set_ui(p, 0);
	mpz_init_set_ui(q, 1);

	mpz_t tmp;
	mpz_init(tmp);

    // Start timing
    const clock_t start_time = clock();
    if (start_time == (clock_t) {-1}) 
    {
        fprintf(stderr, \"Error start_time clock()\\n\");
        return EXIT_FAILURE;
    }



   	while (count > 0) 
   	{
		if (count % 2 == 0) 
		{
			mpz_mul(tmp, q, q);
			mpz_mul(q, q, p);
			mpz_mul_2exp(q, q, 1);
			mpz_add(q, q, tmp);

			mpz_mul(p, p, p);
			mpz_add(p, p, tmp);

			count /= 2;
		} 
		else 
		{
			mpz_mul(tmp, a, q);

			mpz_mul(a, a, p);
			mpz_addmul(a, b, q);
			mpz_add(a, a, tmp);

			mpz_mul(b, b, p);
			mpz_add(b, b, tmp);

			count -= 1;
		}
   	}

    // End timing
    const clock_t end_time = clock();
    if (end_time == (clock_t) {-1})
    {
        fprintf(stderr, \"Error end_time clock()\\n\");
        return EXIT_FAILURE;
    }


    // Print the results to standard out
   	mpz_out_str(stdout, 10, b);
   	printf(\"\\n\");

	// Cleanup
   	mpz_clear(a);
   	mpz_clear(b);
   	mpz_clear(p);
   	mpz_clear(q);
   	mpz_clear(tmp);

    // Print time taken
    const double time_taken = ((double) (end_time - start_time)) / (double) CLOCKS_PER_SEC;
    if (printf(\"Calculation Time: %lf seconds\\n\", time_taken) < 0) return EXIT_FAILURE;
    if (fflush(stdout) == EOF) return EXIT_FAILURE;
    return EXIT_SUCCESS;
}"
wrap_mode = 1
scroll_smooth = true
minimap_draw = true
syntax_highlighter = SubResource("CodeHighlighter_77a87")
line_folding = true
gutters_draw_line_numbers = true
code_completion_enabled = true
indent_automatic = true
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true
script = ExtResource("3_uewk0")

[node name="FileDialog" type="FileDialog" parent="."]
use_native_dialog = true

[connection signal="id_pressed" from="Panel/MainMenu/MarginContainer/MenuBar/File" to="." method="_on_file_id_pressed"]
[connection signal="id_pressed" from="Panel/MainMenu/MarginContainer/MenuBar/Edit" to="." method="_on_edit_id_pressed"]
[connection signal="id_pressed" from="Panel/MainMenu/MarginContainer/MenuBar/Help" to="." method="_on_help_id_pressed"]
